# django_mini_project

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.sh
.github/workflows/: ci.yml
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_rename_user_id_account_user.py
analysis/: analyzers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
analysis/migrations/: 0001_initial.py
config/: celery.py  urls.py
config/settings/: base.py  local.py  prod.py
notification/: models.py  signals.py  tests.py  urls.py  views.py
notification/migrations/: 0001_initial.py
requirements/: dependencies-dev.txt  dependencies.txt
tests/: test_flow.py
transaction/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
transaction/migrations/: 0001_initial.py  0002_rename_transactionhistory_transaction.py  0003_alter_transaction_transaction_at.py  0004_rename_account_id_transaction_account.py  0005_alter_transaction_transaction_at.py
user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
user/migrations/: 0001_initial.py
utils/: models.py
