[project]
name = "django-mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django==5.2.2",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-extensions==4.1",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "drf-yasg==1.21.10",
    "ipython==9.3.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "psycopg2==2.9.10",
    "redis>=6.2.0",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.16.0",
    "ruff==0.11.12",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
